# fastapi-translation-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: __main__.py
app/core/: config.py
app/utils/: logging.py
