[project]
name = "fastapi-translation-service"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "pydantic-settings>=2.11.0",
    "sacremoses==0.1.1",
    "sentencepiece==0.2.1",
    "torch==2.8.0",
    "transformers==4.53.3",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]


[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I", # imports, isort
    "T10",
    "T20",
    "Q",
    "RET",
    "B",  # flake8-bugbear
    "PLC",
    "C",
    "PLW",
    "UP",  # pyupgrade
#    "FIX" # resolving tоdo
    "ISC", # implicit-str-concat
#    "DTZ",
    "PLR1714", # in (0, 1)
    "ASYNC",
#    "ANN" # аннотации
    "G004",
    "TC003",
    "ANN201",
    "ARG001", # unused arguments in functions
]